# vegam

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs  platform.rs  state.rs
src-tauri/src/iroh/: discovery.rs  mod.rs  node.rs  ticket_codec.rs  transfer.rs
src/components/: QRScanner.tsx  ReceiveFile.tsx  SendFile.tsx
src/lib/: api.ts  state-machines.ts  utils.ts
