[package]
name = "vegam"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vegam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
bytes = "1"
iroh = "0.95.1"
iroh-blobs = "0.97.0"
iroh-io = "0.6.2"
redb = "3.1.0"
futures-lite = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
log = "0.4.28"
url = "2.5.7"

[target.'cfg(target_os = "android")'.dependencies]
iroh = { version = "0.95.1" }
iroh-blobs = { version = "0.97.0" }
tauri-plugin-android-fs = { git = "https://github.com/aiueo13/tauri-plugin-android-fs", branch = "main" }
