[package]
name = "vegam"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vegam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
iroh-io = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
n0-future = "0.1.2"

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde_json = "1"
anyhow = "1"
bytes = "1"
# Using latest compatible versions - iroh 0.95+, blobs 0.97+, gossip 0.95+, base 0.95+
iroh = "0.95"
iroh-blobs = "0.97"
iroh-gossip = "0.95"
iroh-base = "0.95"
redb = "3.1.0"
quic-rpc = "0.19.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
log = "0.4.28"
url = "2.5.7"
data-encoding = "2"
rand = "0.8"
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = { git = "https://github.com/aiueo13/tauri-plugin-android-fs", branch = "main" }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
